@@ -24,6 +24,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #13248: Remove lib2to3.pytree.Base.get_prefix/set_prefix.
+
 - Issue #14234: CVE-2012-0876: Randomize hashes of xml attributes in the hash
   table internal to the pyexpat module's copy of the expat library to avoid a
   denial of service due to hash collisions.  Patch by David Malcolm with some
